# ZainGuard-AI

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  setup.py  simple_demo.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  getting-started.md
examples/: basic_usage.py  custom_agent.py
src/: __init__.py
src/agents/: __init__.py  incident_response_agent.py  threat_intel_agent.py  triage_agent.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  agents.py  health.py  tasks.py  tools.py
src/core/: __init__.py  agent_manager.py  config.py  database_connector.py  llm_interface.py
src/tools/: __init__.py  jira_manager.py  siem_connector.py  threat_intel_api.py
tests/: __init__.py  test_basic.py
